# LangChain-Ollama-RAG

./: .gitignore  README.md  app.py  config.py  ingestion.py  main.py  pyproject.toml  requirements.txt  run.py
docs/: 0_index.md  app.md  architecture.md  config.md  dependencies.md  ingestion.md  main.md  mechanics.md  run.md
