[project]
name = "LangChain-Ollama-RAG"
version = "0.1.0"
description = "A fully local RAG application to chat with your documents using LangChain, Ollama LLMs, and ChromaDB — no external API calls, no data leaves your machine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.5.1",
    "chardet>=7.4.3",
    "dotenv>=0.9.9",
    "isort>=8.0.1",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.14.2",
    "streamlit>=1.35.0",
]
